[gd_scene load_steps=10 format=3 uid="uid://dqvqvqgmttuvl"]

[ext_resource type="Script" uid="uid://0yl2v46tthnx" path="res://Scripts/Player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://cx2dn0ulh54fx" path="res://crosshair.tscn" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://c28c58lg7kw60" path="res://UI.tscn" id="3_i3pqv"]

[sub_resource type="Curve" id="Curve_i3pqv"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qh12d"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tfnp7"]
points = PackedVector3Array(-0.395407, -0.91239, -0.0607879, 0.183129, 0.976434, 0.0913734, 0.243754, 0.944476, 0.213213, 0.85217, -0.182485, -0.486818, 0.424401, -0.303198, 0.848993, -0.911144, 0.36442, -0.182115, -0.12217, 0.152808, -0.978122, -0.547318, 0.152022, 0.820881, 0.333381, -0.879328, -0.333381, 0.84978, 0.515877, -0.0908916, -0.542807, -0.512578, -0.663347, -0.758285, -0.515596, 0.394346, 0.121401, 0.759234, -0.637832, 0.36501, 0.486807, 0.791013, 0.911736, -0.182233, 0.364656, 0.121401, -0.759234, 0.637832, -0.45305, 0.845731, 0.271754, 0.364656, -0.182233, -0.911736, -0.602466, 0.482048, -0.632665, 0.726806, -0.666096, 0.151394, 0.543048, 0.361969, -0.75418, -0.879843, -0.333648, -0.333648, -0.212566, -0.243014, 0.941609, -0.911736, 0.182233, 0.364656, -0.395521, 0.882345, -0.243412, -0.121378, -0.63771, -0.759088, -0.121378, 0.63771, 0.759088, 0.75418, 0.361969, 0.543048, 0.183129, -0.976435, 0.0913736, -0.607417, -0.0302567, -0.789718, -0.362476, -0.755238, 0.543809, 0.061151, 0.183453, 0.979182)

[sub_resource type="Animation" id="Animation_8jv3a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerHead/Camera3D/Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.471, -0.201, -0.538)]
}

[sub_resource type="Animation" id="Animation_itsju"]
resource_name = "shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerHead/Camera3D/Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Vector3(0.471426, -0.201362, -0.469965), Vector3(0.471426, -0.201362, -0.537794)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dln08"]
_data = {
&"RESET": SubResource("Animation_8jv3a"),
&"shoot": SubResource("Animation_itsju")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 2
floor_constant_speed = true
floor_max_angle = 1.309
floor_snap_length = 0.3
script = ExtResource("1_4flbx")
zoom_curve = SubResource("Curve_i3pqv")

[node name="PlayerMesh3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
mesh = SubResource("CapsuleMesh_qh12d")
skeleton = NodePath("")

[node name="PlayerCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_tfnp7")

[node name="PlayerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0)

[node name="Camera3D" type="Camera3D" parent="PlayerHead"]

[node name="DebugLabel0" type="Label" parent="PlayerHead/Camera3D"]
visible = false
offset_right = 241.0
offset_bottom = 90.0
text = "Text"
metadata/_edit_use_anchors_ = true

[node name="DebugLabel1" type="Label" parent="PlayerHead/Camera3D"]
offset_right = 241.0
offset_bottom = 90.0
text = "Text"
metadata/_edit_use_anchors_ = true

[node name="camera_cast" type="RayCast3D" parent="PlayerHead/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00139099)
target_position = Vector3(0, 0, -10)
hit_from_inside = true
hit_back_faces = false
debug_shape_custom_color = Color(1, 0, 1, 1)

[node name="Inventory" type="Node3D" parent="PlayerHead/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.998166, -0.0605433, 0, 0.0605433, 0.998166, 0.471, -0.201, -0.538)

[node name="Crosshair" parent="PlayerHead/Camera3D" instance=ExtResource("2_onrkg")]

[node name="UI" parent="PlayerHead/Camera3D" instance=ExtResource("3_i3pqv")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dln08")
}
